force-app/main/default/objects/ssot__ReturnOrder__dlm/fields/ssot__CustomerAccountId__c.field-meta.xml
<CustomField>
    <fullName>ssot__CustomerAccountId__c</fullName>
    <label>Customer Account</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CustomerAccountId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>