force-app/main/default/objects/ssot__ReturnOrder__dlm/fields/ssot__ExpectedArrivalDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExpectedArrivalDate__c</fullName>
    <label>Expected Arrival Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExpectedArrivalDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>