force-app/main/default/objects/ssot__ReturnOrder__dlm/fields/ssot__PackagingInstruction__c.field-meta.xml
<CustomField>
    <fullName>ssot__PackagingInstruction__c</fullName>
    <label>Packaging Instruction</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PackagingInstruction</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>