force-app/main/default/objects/ssot__ReturnOrder__dlm/fields/ssot__rel_1697761216525_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761216525_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ReturnOrder_SalesOrderId_map_SalesOr_rel</label>
    <referenceTo>ssot__SalesOrder__dlm</referenceTo>
    <relationshipLabel>ReturnOrder_SalesOrderId_map_SalesOr_rel</relationshipLabel>
    <relationshipName>rel_1697761216525_end</relationshipName>
    <type>Lookup</type>
</CustomField>