force-app/main/default/objects/ssot__ReturnOrder__dlm/fields/ssot__ReturnAuthorizationNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReturnAuthorizationNumber__c</fullName>
    <label>Return Authorization Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReturnAuthorizationNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>