force-app/main/default/objects/ssot__ReturnOrder__dlm/fields/ssot__ReturnOrderStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReturnOrderStatus__c</fullName>
    <label>Return Order Status</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReturnOrderStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>