force-app/main/default/objects/ssot__ReturnOrder__dlm/fields/ssot__ReturnSubmittedDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReturnSubmittedDate__c</fullName>
    <label>Return Submitted Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReturnSubmittedDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>DateTime</type>
</CustomField>