force-app/main/default/objects/ssot__ReturnOrder__dlm/fields/ssot__ShippingInternalCost__c.field-meta.xml
<CustomField>
    <fullName>ssot__ShippingInternalCost__c</fullName>
    <label>Shipping Internal Cost</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ShippingInternalCost</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>