force-app/main/default/objects/ssot__ReturnOrder__dlm/fields/ssot__ShippingWeight__c.field-meta.xml
<CustomField>
    <fullName>ssot__ShippingWeight__c</fullName>
    <label>Shipping Weight</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ShippingWeight</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>