force-app/main/default/objects/ssot__ReturnOrder__dlm/fields/ssot__StatusCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__StatusCategory__c</fullName>
    <label>Return Order Status Category</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>StatusCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>