force-app/main/default/objects/ssot__ReturnOrder__dlm/fields/ssot__TotalFeeAdjustAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalFeeAdjustAmount__c</fullName>
    <label>Total Fee Adjust Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalFeeAdjustAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>