force-app/main/default/objects/ssot__ReturnOrder__dlm/fields/ssot__TotalFeeAdjustAmtWithTax__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalFeeAdjustAmtWithTax__c</fullName>
    <label>Total Fee Adjust Amt With Tax</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalFeeAdjustAmtWithTax</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>