force-app/main/default/objects/ssot__ReturnOrder__dlm/fields/ssot__TotalProductAdjustAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalProductAdjustAmount__c</fullName>
    <label>Total Product Adjust Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalProductAdjustAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>